--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@chriscdn/build-url",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "description": "A small utility for building URLs.",
+  "repository": "https://github.com/chriscdn/build-url",
+  "author": "Christopher Meyer <chris@schwiiz.org>",
   "license": "MIT",
   "type": "module",
   "source": "./src/index.ts",
