--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "scripts": {
     "build": "rm -rf ./lib/ && microbundle",
     "dev": "microbundle watch",
-    "test": "jest"
+    "test": "vitest"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
-    "ts-jest": "^29.1.2"
+    "vitest": "^3.0.7"
   }
 }
