--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "microbundle": "^0.15.1",
-    "vitest": "^3.1.2"
-  }
+    "vitest": "^4.0.6"
+  },
+  "files": [
+    "lib"
+  ]
 }
